package model;

/**
 * MessageStatus - composant principal de l'application.
 */
public enum MessageStatus {
    ENVOYE,
    RECU,
    LU
}

