package model;

/**
 * Role - composant principal de l'application.
 */
public enum Role {
    ORGANISATEUR,
    MEMBRE,
    BENEVOLE
}

