package model;

/**
 * Status - composant principal de l'application.
 */
public enum Status {
    ONLINE,
    OFFLINE
}

